[package]
name = "cargo-registry"
authors = ["Alex Crichton <alex@alexcrichton.com>"]
version = "0.2.2"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rust-lang/crates.io"
description = "Backend of crates.io"
edition = "2021"

[dependencies]
diesel = { version = "=1.4.8", features = ["postgres"] }

[build-dependencies]
diesel = { version = "=1.4.8", features = ["postgres"] }
diesel_migrations = { version = "=1.4.0", features = ["postgres"] }
dotenv = "=0.15.0"
